sounds are functional

--- a/index.html
+++ b/index.html
@@ -10,32 +10,57 @@
         <audio data-key="65" src="resources/clap-808.wav"></audio>
         <audio data-key="83" src="resources/kick-808.wav"></audio>
         <audio data-key="68" src="resources/hihat-ring.wav"></audio>
-        <audio data-key="70" src="resources/clap-808.wav"></audio>
-        <audio data-key="65" src="resources/clap-808.wav"></audio>
-        <audio data-key="65" src="resources/clap-808.wav"></audio>
-        <audio data-key="65" src="resources/clap-808.wav"></audio>
-        <audio data-key="65" src="resources/clap-808.wav"></audio>
-        <audio data-key="65" src="resources/clap-808.wav"></audio>
-        <audio data-key="65" src="resources/clap-808.wav"></audio>
-        <audio data-key="65" src="resources/clap-808.wav"></audio>
-        <audio data-key="65" src="resources/clap-808.wav"></audio>
-        <audio data-key="65" src="resources/clap-808.wav"></audio>
-        <audio data-key="65" src="resources/clap-808.wav"></audio>
-        <audio data-key="65" src="resources/clap-808.wav"></audio>
-        <audio data-key="65" src="resources/clap-808.wav"></audio>
-        <audio data-key="65" src="resources/clap-808.wav"></audio>
-        <audio data-key="65" src="resources/clap-808.wav"></audio>
-        <div>
-            <p class="key">A</p>
-            <p class="key">S</p>
-            <p class="key">D</p>
-            <p class="key">F</p>
-            <p class="key">G</p>
-            <p class="key">H</p>
-            <p class="key">J</p>
-            <p class="key">K</p>
-            <p class="key">L</p>
+        <audio data-key="70" src="resources/hihat-digital.wav"></audio>
+        <audio data-key="71" src="resources/kick-electro01.wav"></audio>
+        <audio data-key="72" src="resources/kick-zapper.wav"></audio>
+        <audio data-key="74" src="resources/openhat-808.wav"></audio>
+        <audio data-key="75" src="resources/perc-weirdo.wav"></audio>
+        <audio data-key="76" src="resources/shaker-shuffle.wav"></audio>
+        <audio data-key="186" src="resources/shaker-suckup.wav"></audio>
+        <audio data-key="70" src="resources/openhat-slick.wav"></audio>
+        <div class="keys">
+            <div data-key="65" class="key">
+                <kbd>A</kbd>
+                <span class="sound">clap</span>
+            </div>
+            <div data-key="83" class="key">
+                <kbd>S</kbd>
+                <span class="sound">kick 1</span>
+            </div>
+            <div data-key="68" class="key">
+                <kbd>D</kbd>
+                <span class="sound">hi hat</span>
+            </div>
+            <div data-key="70" class="key">
+                <kbd>F</kbd>
+                <span class="sound">hi hat 2</span>
+            </div>
+            <div data-key="71" class="key">
+                <kbd>G</kbd>
+                <span class="sound">kick 2</span>
+            </div>
+            <div data-key="72" class="key">
+                <kbd>H</kbd>
+                <span class="sound">kick 3</span>
+            </div>
+            <div data-key="74" class="key">
+                <kbd>J</kbd>
+                <span class="sound">open hat</span>
+            </div>
+            <div data-key="75" class="key">
+                <kbd>K</kbd>
+                <span class="sound">hi hat 2</span>
+            </div>
+            <div data-key="76" class="key">
+                <kbd>L</kbd>
+                <span class="sound">shaker 1</span>
+            </div>
+            <div data-key="186" class="key">
+                <kbd>;</kbd>
+                <span class="sound">shaker 2</span>
+            </div>
         </div>
+        
         
     </body>
 </html>
