remove class currently not working

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </div>
             <div data-key="75" class="key">
                 <kbd>K</kbd>
-                <span class="sound">hi hat 2</span>
+                <span class="sound">perc</span>
             </div>
             <div data-key="76" class="key">
                 <kbd>L</kbd>
